--- a/prometheus-mongodb-exporter/alerts.yaml
+++ b/prometheus-mongodb-exporter/alerts.yaml
@@ -2,7 +2,7 @@
 - name: MongodbDown
   namespace: __namespace__
   expr: mongodb_up{service="__fullname__",namespace="__namespace__"}
-  message: MongoDB instance {{ $labels.instance }} down
+  message: MongoDB [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
     - compareOp: "=="
@@ -14,7 +14,7 @@
 - name: MongodbTooManyConnections
   namespace: __namespace__
   expr: avg by(instance) (rate(mongodb_connections{state="current",service="__fullname__",namespace="__namespace__"}[1m])) / avg by(instance) (sum (mongodb_connections{service="__fullname__",namespace="__namespace__"})) * 100
-  message: MongoDB too many connections instance {{ $labels.instance }}
+  message: MongoDB too many connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
     - compareOp: ">"
@@ -26,7 +26,7 @@
 - name: MongodbLowAvalibleConnections
   namespace: __namespace__
   expr: mongodb_connections{state="available",service="__fullname__",namespace="__namespace__"}
-  message: MongoDB few available connections instance {{ $labels.instance }}
+  message: MongoDB few available connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
     - compareOp: "<"
@@ -38,7 +38,7 @@
 - name: MongodbTooManyMemories
   namespace: __namespace__
   expr: mongodb_mongod_wiredtiger_cache_bytes{type="total",service="__fullname__",namespace="__namespace__"} / on(pod,namespace,instance,job,service) mongodb_mongod_wiredtiger_cache_max_bytes{service="__fullname__",namespace="__namespace__"} * 100
-  message: MongoDB too many memories instance {{ $labels.instance }}
+  message: MongoDB too many memories [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
     - compareOp: ">"
