--- a/prometheus-elasticsearch-exporter/templates/prometheusrule.yaml
+++ b/prometheus-elasticsearch-exporter/templates/prometheusrule.yaml
@@ -14,7 +14,8 @@ spec:
     rules:
     - alert: ElasticsearchDataUsedTooHigh
       annotations:
-        message: ElasticSearch instance {{"{{"}} $labels.instance }} Data Used Too High.
+        message: ElasticSearch [namespace {{"{{"}} $labels.namespace }}] [service {{"{{"}} $labels.service
+          }}] [instance {{"{{"}} $labels.instance }}] Data Used Too High.
         value: '{{"{{"}} $value | printf "%.1f" }}'
       expr: (elasticsearch_filesystem_data_size_bytes{service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"}
         - elasticsearch_filesystem_data_free_bytes{service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}",namespace="{{ .Release.Namespace }}"})
@@ -31,8 +32,9 @@ spec:
     rules:
     - alert: ElasticsearchHeapTooHigh
       annotations:
-        message: ElasticSearch instance {{"{{"}} $labels.instance }} node {{"{{"}} $labels.node
-          }} heap usage is high
+        message: ElasticSearch [namespace {{"{{"}} $labels.namespace }}] [service {{"{{"}} $labels.service
+          }}] [instance {{"{{"}} $labels.instance }}] [node {{"{{"}} $labels.node }}] heap usage
+          is high
         value: '{{"{{"}} $value | printf "%.1f" }}'
       expr: elasticsearch_jvm_memory_used_bytes{service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}",area="heap",namespace="{{ .Release.Namespace }}"}
         / elasticsearch_jvm_memory_max_bytes{service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}",area="heap",namespace="{{ .Release.Namespace }}"}>0.9
@@ -47,7 +49,8 @@ spec:
     rules:
     - alert: ElasticsearchCluster
       annotations:
-        message: Elasticsearch Cluster Red instance {{"{{"}} $labels.instance }}
+        message: Elasticsearch Cluster Red [namespace {{"{{"}} $labels.namespace }}] [service
+          {{"{{"}} $labels.service }}] [instance {{"{{"}} $labels.instance }}]
         value: '{{"{{"}} $value | printf "%.1f" }}'
       expr: elasticsearch_cluster_health_status{color="red", namespace="{{ .Release.Namespace }}",service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}"}==1
       for: 0m
@@ -61,7 +64,8 @@ spec:
     rules:
     - alert: ElasticsearchClusterYellow
       annotations:
-        message: Elasticsearch Cluster Yellow instance {{"{{"}} $labels.instance }}
+        message: Elasticsearch Cluster Yellow [namespace {{"{{"}} $labels.namespace }}]
+          [service {{"{{"}} $labels.service }}] [instance {{"{{"}} $labels.instance }}]
         value: '{{"{{"}} $value | printf "%.1f" }}'
       expr: elasticsearch_cluster_health_status{color="yellow",namespace="{{ .Release.Namespace }}",service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}"}==1
       for: 0m
@@ -75,7 +79,8 @@ spec:
     rules:
     - alert: ElasticsearchUnassignedShards
       annotations:
-        message: Elasticsearch unassigned shards instance {{"{{"}} $labels.instance }}
+        message: Elasticsearch unassigned shards [namespace {{"{{"}} $labels.namespace }}]
+          [service {{"{{"}} $labels.service }}] [instance {{"{{"}} $labels.instance }}]
         value: '{{"{{"}} $value | printf "%.1f" }}'
       expr: elasticsearch_cluster_health_unassigned_shards{namespace="{{ .Release.Namespace }}",service="{{ template "prometheus-elasticsearch-exporter.fullname" . }}"}>0
       for: 0m
