--- a/prometheus-memcached-exporter/alerts.yaml
+++ b/prometheus-memcached-exporter/alerts.yaml
@@ -2,7 +2,7 @@
 - name: MemcachedDown
   namespace: __namespace__
   expr: memcached_up{service="__fullname__",namespace="__namespace__"}
-  message: Memcached instance {{ $labels.instance }} down
+  message: Memcached [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
     - compareOp: "=="
@@ -14,7 +14,7 @@
 - name: MemcachedLowAvalibleConnections
   namespace: __namespace__
   expr: memcached_current_connections{service="__fullname__",namespace="__namespace__"} / memcached_max_connections{service="__fullname__",namespace="__namespace__"} * 100
-  message: memcached few available connections instance {{ $labels.instance }}
+  message: memcached few available connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 0m
   alertLevels:
     - compareOp: ">"
