--- a/prometheus-mysql-exporter/alerts.yaml
+++ b/prometheus-mysql-exporter/alerts.yaml
@@ -2,7 +2,7 @@
 - name: MysqlDown
   namespace: __namespace__
   expr: mysql_up{service="__fullname__",namespace="__namespace__"}
-  message: MySQL instance {{ $labels.instance }} down
+  message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
     - compareOp: "=="
@@ -14,7 +14,7 @@
 - name: MysqlTooManyConnections
   namespace: __namespace__
   expr: max_over_time(mysql_global_status_threads_connected{service="__fullname__",namespace="__namespace__"}[1m]) / mysql_global_variables_max_connections{service="__fullname__",namespace="__namespace__"} * 100
-  message: MySQL instance {{ $labels.instance }} too many connections > 80%
+  message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] too many connections > 80%
   for: 2m
   alertLevels:
     - compareOp: ">"
@@ -26,7 +26,7 @@
 - name: MysqlSlowQueries
   namespace: __namespace__
   expr: increase(mysql_global_status_slow_queries{service="__fullname__",namespace="__namespace__"}[1m])
-  message: MySQL instance {{ $labels.instance }} slow queries
+  message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] slow queries
   for: 2m
   alertLevels:
     - compareOp: ">"
@@ -38,7 +38,7 @@
 - name: MysqlRestarted
   namespace: __namespace__
   expr: mysql_global_status_uptime{service="__fullname__",namespace="__namespace__"}
-  message: MySQL instance {{ $labels.instance }} restarted
+  message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] restarted
   for: 0m
   alertLevels:
     - compareOp: "<"
