--- a/prometheus-rabbitmq-exporter/alerts.yaml
+++ b/prometheus-rabbitmq-exporter/alerts.yaml
@@ -2,7 +2,7 @@
 - name: RabbitmqNodeDown
   namespace: __namespace__
   expr: rabbitmq_running{service="__fullname__",namespace="__namespace__"}
-  message: Rabbitmq instance {{ $labels.instance }} node {{ $labels.node }} down
+  message: Rabbitmq [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] node {{ $labels.node }} down
   for: 5m
   alertLevels:
     - compareOp: "=="
@@ -14,7 +14,7 @@
 - name: RabbitmqClusterDown
   namespace: __namespace__
   expr: rabbitmq_up{service="__fullname__",namespace="__namespace__"}
-  message: The Rabbitmq cluster {{ $labels.service }} is maybe down.
+  message: The Rabbitmq cluster [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] is maybe down.
   for: 0m
   alertLevels:
     - compareOp: "=="
@@ -26,7 +26,7 @@
 - name: RabbitMQClusterPartition
   namespace: __namespace__
   expr: rabbitmq_partitions{service="__fullname__",namespace="__namespace__"}
-  message: Rabbitmq cluster partition in Rabbitmq cluster tracked by {{ $labels.service }} was detected by the node {{ $labels.node }}
+  message: Rabbitmq cluster partition in Rabbitmq cluster was detected [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] [node {{ $labels.node }}]
   for: 5m
   alertLevels:
     - compareOp: ">"
@@ -38,7 +38,7 @@
 - name: RabbitmqOutOfMemory
   namespace: __namespace__
   expr: rabbitmq_node_mem_used{service="__fullname__",namespace="__namespace__"} / rabbitmq_node_mem_limit{service="__fullname__",namespace="__namespace__"} * 100
-  message: The Rabbitmq node {{ $labels.node }} is Out of memory
+  message: The Rabbitmq [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] [node {{ $labels.node }}] is Out of memory
   for: 5m
   alertLevels:
     - compareOp: ">"
@@ -50,7 +50,7 @@
 - name: RabbitmqTooManyConnections
   namespace: __namespace__
   expr: rabbitmq_connectionsTotal{service="__fullname__",namespace="__namespace__"}
-  message: Too many connections to the Rabbitmq cluster instance {{ $labels.instance }}
+  message: Too many connections to the Rabbitmq cluster [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
     - compareOp: ">"
