--- a/prometheus-redis-exporter/alerts.yaml
+++ b/prometheus-redis-exporter/alerts.yaml
@@ -2,7 +2,7 @@
 - name: RedisDown
   namespace: __namespace__
   expr: redis_up{service="__fullname__",namespace="__namespace__"}
-  message: Redis instance {{ $labels.instance }} down
+  message: Redis [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] down
   for: 0m
   alertLevels:
     - compareOp: "=="
@@ -14,7 +14,7 @@
 - name: RedisMemoryHigh
   namespace: __namespace__
   expr: redis_memory_used_bytes{service="__fullname__",namespace="__namespace__"} / redis_memory_max_bytes{service="__fullname__", namespace="__namespace__"} * 100
-  message: Redis instance {{ $labels.instance }} is using too much memory
+  message: Redis [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] is using too much memory
   for: 2m
   alertLevels:
     - compareOp: ">"
@@ -26,7 +26,7 @@
 - name: RedisTooManyConnections
   namespace: __namespace__
   expr: redis_connected_clients{service="__fullname__",namespace="__namespace__"} / redis_config_maxclients{service="__fullname__",namespace="__namespace__"} * 100
-  message: Redis too many connections instance {{ $labels.instance }}
+  message: Redis too many connections [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}]
   for: 5m
   alertLevels:
     - compareOp: ">"
@@ -38,7 +38,7 @@
 - name: RedisRejectedConnections
   namespace: __namespace__
   expr: increase(redis_rejected_connections_total{service="__fullname__",namespace="__namespace__"}[1m])
-  message: MySQL instance {{ $labels.instance }} restarted
+  message: MySQL [namespace {{ $labels.namespace }}] [service {{ $labels.service }}] [instance {{ $labels.instance }}] restarted
   for: 0m
   alertLevels:
     - compareOp: ">"
