--- a/apisix/templates/pdb.yaml
+++ b/apisix/templates/pdb.yaml
@@ -13,19 +13,22 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
-apiVersion: v1
-kind: Service
+
+{{- if (and .Values.apisix.enabled .Values.apisix.podDisruptionBudget.enabled) }}
+apiVersion: policy/v1beta1
+kind: PodDisruptionBudget
 metadata:
-  name: {{ include "apisix-ingress-controller.fullname" . }}
+  name: {{ include "apisix.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "apisix-ingress-controller.labels" . | nindent 4 }}
+    {{- include "apisix.labels" . | nindent 4 }}
 spec:
-  type: ClusterIP
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ (.Values.config.httpListen | split ":")._1 }}
-      protocol: TCP
-      name: http
+{{- if .Values.apisix.podDisruptionBudget.minAvailable }}
+  minAvailable: {{ .Values.apisix.podDisruptionBudget.minAvailable }}
+{{- else }}
+  maxUnavailable: {{ .Values.apisix.podDisruptionBudget.maxUnavailable }}
+{{- end }}
   selector:
-    {{- include "apisix-ingress-controller.selectorLabels" . | nindent 4 }}
+    matchLabels:
+{{- include "apisix.selectorLabels" . | nindent 6 }}
+{{- end }}
