--- a/apisix/charts/apisix-dashboard/templates/configmap.yaml
+++ b/apisix/charts/apisix-dashboard/templates/configmap.yaml
@@ -30,6 +30,7 @@ data:
         port: {{ .listen.port }}
       {{- with .etcd }}
       etcd:
+        prefix: {{ .prefix | quote }}
         endpoints:
           {{- range .endpoints }}
           - {{ . }}
