--- a/apisix/templates/service-gateway.yaml
+++ b/apisix/templates/service-gateway.yaml
@@ -26,6 +26,7 @@ metadata:
     {{- end }}
   labels:
     {{- include "apisix.labels" . | nindent 4 }}
+    app.kubernetes.io/service: apisix-gateway
 spec:
   type: {{ .Values.gateway.type }}
   externalTrafficPolicy: {{ .Values.gateway.externalTrafficPolicy }}
@@ -40,7 +41,7 @@ spec:
   {{- end }}
   {{- end }}
   {{- end }}
-  {{- if gt (len .Values.admin.externalIPs) 0 }}
+  {{- if gt (len .Values.gateway.externalIPs) 0 }}
   externalIPs:
   {{- range $ip := .Values.gateway.externalIPs }}
   - {{ $ip }}
@@ -64,6 +65,26 @@ spec:
     nodePort: {{ .Values.gateway.tls.nodePort }}
   {{- end }}
     protocol: TCP
+  {{- end }}
+  {{- if and .Values.gateway.stream.enabled (or (gt (len .Values.gateway.stream.tcp) 0) (gt (len .Values.gateway.stream.udp) 0)) }}
+  {{- with .Values.gateway.stream }}
+  {{- if (gt (len .tcp) 0) }}
+  {{- range $index, $port := .tcp }}
+  - name: proxy-tcp-{{ $index | toString }}
+    port: {{ $port }}
+    targetPort: {{ $port }}
+    protocol: TCP
+  {{- end }}
+  {{- end }}
+  {{- if (gt (len .udp) 0) }}
+  {{- range $index, $port := .udp }}
+  - name: proxy-udp-{{ $index | toString }}
+    port: {{ $port }}
+    targetPort: {{ $port }}
+    protocol: UDP
+  {{- end }}
+  {{- end }}
+  {{- end }}
   {{- end }}
   selector:
     {{- include "apisix.selectorLabels" . | nindent 4 }}
