--- a/apisix/values.yaml
+++ b/apisix/values.yaml
@@ -20,39 +20,77 @@ global:
 
 apisix:
   # Enable or disable Apache APISIX itself
-  # Set it to flase and ingress-controller.enabled=true will deploy only ingress-controller
+  # Set it to false and ingress-controller.enabled=true will deploy only ingress-controller
   enabled: true
+
+  # Enable nginx IPv6 resolver
+  enableIPv6: false
+
+  # Use Pod metadata.uid as the APISIX id.
+  setIDFromPodUID: false
+
+  customLuaSharedDicts: []
+    # - name: foo
+    #   size: 10k
+    # - name: bar
+    #   size: 1m
+  luaModuleHook:
+    enabled: false
+    # extend lua_package_path to load third party code
+    luaPath: ""
+    # the hook module which will be used to inject third party code into APISIX
+    # use the lua require style like: "module.say_hello"
+    hookPoint: ""
+    # configmap that stores the codes
+    configMapRef:
+      name: ""
+      # mounts decides how to mount the codes to the container.
+      mounts:
+      - key: ""
+        path: ""
+
+  enableCustomizedConfig: false
+  customizedConfig: {}
 
   image:
     repository: registry.cn-beijing.aliyuncs.com/kubegemsapp/apisix
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: 2.7-alpine
+    tag: 2.14.1-alpine
 
+  # Use a `DaemonSet` or `Deployment`
+  kind: Deployment
+  # kind is DaemonSet,replicaCount not become effective
   replicaCount: 1
 
   podAnnotations: {}
-  podSecurityContext: 
-    fsGroup: 2000
-  securityContext: 
-    capabilities:
-      drop:
-      - ALL
-    readOnlyRootFilesystem: true
-    runAsNonRoot: true
-    runAsUser: 1000
+  podSecurityContext: {}
+    # fsGroup: 2000
+  securityContext: {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
 
-  resources: 
+  # See https://kubernetes.io/docs/tasks/run-application/configure-pdb/ for more details
+  podDisruptionBudget:
+    enabled: false
+    minAvailable: 90%
+    maxUnavailable: 1
+
+  resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    limits:
-      cpu: "1"
-      memory: 2Gi
-    requests:
-      cpu: 100m
-      memory: 128Mi
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
 
   nodeSelector: {}
   tolerations: []
@@ -61,6 +99,24 @@ apisix:
   podAntiAffinity:
     enabled: false
 
+  # timezone is the timezone where apisix uses.
+  # For example: "UTC" or "Asia/Shanghai"
+  # This value will be set on apisix container's environment variable TZ.
+  # You may need to set the timezone to be consistent with your local time zone,
+  # otherwise the apisix's logs may used to retrieve event maybe in wrong timezone.
+  timezone: ""
+
+  # extraEnvVars An array to add extra env vars
+  # e.g:
+  # extraEnvVars:
+  #   - name: FOO
+  #     value: "bar"
+  #   - name: FOO2
+  #     valueFrom:
+  #       secretKeyRef:
+  #         name: SECRET_NAME
+  #         key: KEY
+  extraEnvVars: []
 
 nameOverride: "apisix"
 fullnameOverride: "apisix"
@@ -74,6 +130,7 @@ gateway:
   # type: LoadBalancer
   # annotations:
   #   service.beta.kubernetes.io/aws-load-balancer-type: nlb
+  externalIPs: []
   http:
     enabled: true
     servicePort: 80
@@ -82,10 +139,13 @@ gateway:
     enabled: true
     servicePort: 443
     containerPort: 9443
+    existingCASecret: ""
+    certCAFilename: ""
     http2:
       enabled: true
   stream:  # L4 proxy (TCP/UDP)
     enabled: true
+    only: false
     tcp: []
     udp: []
   ingress:
@@ -124,7 +184,7 @@ admin:
   allow:
     # The ip range for allowing access to Apache APISIX
     ipList:
-      - 0.0.0.0/0
+      - 127.0.0.1/24
 
 
 # APISIX plugins to be enabled
@@ -141,6 +201,7 @@ plugins:
   - hmac-auth
   - http-logger
   - ip-restriction
+  - ua-restriction
   - jwt-auth
   - kafka-logger
   - key-auth
@@ -149,6 +210,7 @@ plugins:
   - limit-req
   - node-status
   - openid-connect
+  - authz-casbin
   - prometheus
   - proxy-cache
   - proxy-mirror
@@ -168,9 +230,87 @@ plugins:
   - wolf-rbac
   - zipkin
   - traffic-split
+  - gzip
+  - real-ip
+  - ext-plugin-pre-req
+  - ext-plugin-post-req
 stream_plugins:
   - mqtt-proxy
+  - ip-restriction
+  - limit-conn
 
+pluginAttrs: {}
+
+extPlugin:
+  enabled: false
+  cmd: ["/path/to/apisix-plugin-runner/runner", "run"]
+
+# customPlugins allows you to mount your own HTTP plugins.
+customPlugins:
+  enabled: false
+  # the lua_path that tells APISIX where it can find plugins,
+  # note the last ';' is required.
+  luaPath: "/opts/custom_plugins/?.lua"
+  plugins:
+      # plugin name.
+    - name: ""
+      # plugin attrs
+      attrs: |
+      # plugin codes can be saved inside configmap object.
+      configMap:
+        # name of configmap.
+        name: ""
+        # since keys in configmap is flat, mountPath allows to define the mount
+        # path, so that plugin codes can be mounted hierarchically.
+        mounts:
+          - key: ""
+            path: ""
+          - key: ""
+            path: ""
+
+updateStrategy: {}
+  # type: RollingUpdate
+
+extraVolumes: []
+# - name: extras
+#   emptyDir: {}
+
+extraVolumeMounts: []
+# - name: extras
+#   mountPath: /usr/share/extras
+#   readOnly: true
+
+discovery:
+  enabled: false
+  registry:
+      # Integration service discovery registry. E.g eureka\dns\nacos\consul_kv
+      # reference:
+      # https://apisix.apache.org/docs/apisix/discovery#configuration-for-eureka
+      # https://apisix.apache.org/docs/apisix/discovery/dns#service-discovery-via-dns
+      # https://apisix.apache.org/docs/apisix/discovery/consul_kv#configuration-for-consul-kv
+      # https://apisix.apache.org/docs/apisix/discovery/nacos#configuration-for-nacos
+      #
+      # an eureka example:
+      # eureka:
+      #   host:
+      #     - "http://${username}:${password}@${eureka_host1}:${eureka_port1}"
+      #     - "http://${username}:${password}@${eureka_host2}:${eureka_port2}"
+      #   prefix: "/eureka/"
+      #   fetch_interval: 30
+      #   weight: 100
+      #   timeout:
+      #     connect: 2000
+      #     send: 2000
+      #     read: 5000
+
+# access log and error log configuration
+logs:
+  enableAccessLog: true
+  accessLog: "/dev/stdout"
+  accessLogFormat: '$remote_addr - $remote_user [$time_local] $http_host \"$request\" $status $body_bytes_sent $request_time \"$http_referer\" \"$http_user_agent\" $upstream_addr $upstream_status $upstream_response_time \"$upstream_scheme://$upstream_host$upstream_uri\"'
+  accessLogFormatEscape: default
+  errorLog: "/dev/stderr"
+  errorLogLevel: "warn"
 
 dns:
   resolvers:
@@ -183,6 +323,9 @@ dns:
   validity: 30
   timeout: 5
 
+initContainer:
+  image: busybox
+  tag: 1.28
 
 autoscaling:
   enabled: false
@@ -191,6 +334,40 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   targetMemoryUtilizationPercentage: 80
 
+# Custom configuration snippet.
+configurationSnippet:
+  main: |
+
+  httpStart: |
+
+  httpEnd: |
+
+  httpSrv: |
+
+  httpAdmin: |
+
+  stream: |
+
+# Observability configuration.
+# ref: https://apisix.apache.org/docs/apisix/plugins/prometheus/
+serviceMonitor:
+  enabled: false
+  # namespace where the serviceMonitor is deployed, by default, it is the same as the namespace of the apisix
+  namespace: ""
+  # name of the serviceMonitor, by default, it is the same as the apisix fullname
+  name: ""
+  # interval at which metrics should be scraped
+  interval: 15s
+  # path of the metrics endpoint
+  path: /apisix/prometheus/metrics
+  # prefix of the metrics
+  metricPrefix: apisix_
+  # container port where the metrics are exposed
+  containerPort: 9091
+  # @param serviceMonitor.labels ServiceMonitor extra labels
+  labels: {}
+  # @param serviceMonitor.annotations ServiceMonitor annotations
+  annotations: {}
 
 # etcd configuration
 # use the FQDN address or the IP of the etcd
@@ -198,9 +375,7 @@ etcd:
   # install etcd(v3) by default, set false if do not want to install etcd(v3) together
   enabled: false
   host:
-    - http://external.etcd:2379  # host or ip e.g. http://172.20.128.89:2379
-  user: root
-  password: etcd
+    - http://etcd.host:2379  # host or ip e.g. http://172.20.128.89:2379
   prefix: "/apisix"
   timeout: 30
 
@@ -208,7 +383,16 @@ etcd:
   auth:
     rbac:
       # No authentication by default
+      create: false
+      user: ""
+      password: ""
+    tls:
       enabled: false
+      existingSecret: ""
+      certFilename: ""
+      certKeyFilename: ""
+      verify: true
+      sni: ""
 
   service:
     port: 2379
@@ -217,12 +401,10 @@ etcd:
 
 
 dashboard:
+  enabled: true
   nameOverride: apisix-dashboard
   fullnameOverride: apisix-dashboard
-  enabled: true
 
 
 ingress-controller:
-  nameOverride: apisix-ingress-controller
-  fullnameOverride: apisix-ingress-controller
-  enabled: true
+  enabled: false
