fixed(mysql-exporter): can't collect table size

--- a/prometheus-mysql-exporter/values.yaml
+++ b/prometheus-mysql-exporter/values.yaml
@@ -99,7 +99,7 @@ collectors:
   info_schema.processlist: true
   info_schema.processlist.min_time: 0
   info_schema.query_response_time: true
-  # info_schema.tables: true
+  info_schema.tables: true
   # info_schema.tables.databases: '*'
   # info_schema.tablestats: false
   # info_schema.schemastats: false
