--- a/prometheus-postgres-exporter/values.yaml
+++ b/prometheus-postgres-exporter/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: quay.io/prometheuscommunity/postgres-exporter
+  repository: registry.cn-beijing.aliyuncs.com/kubegemsapp/postgres-exporter
   tag: v0.10.1
   pullPolicy: IfNotPresent
 
