--- a/prometheus-memcached-exporter/alerts.yaml
+++ b/prometheus-memcached-exporter/alerts.yaml
@@ -9,7 +9,8 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
 - name: MemcachedLowAvalibleConnections
   namespace: __namespace__
@@ -21,5 +22,6 @@
       compareValue: "90"
       severity: error
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
