--- a/prometheus-rabbitmq-exporter/alerts.yaml
+++ b/prometheus-rabbitmq-exporter/alerts.yaml
@@ -9,7 +9,8 @@
       compareValue: "0"
       severity: error
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
 - name: RabbitmqClusterDown
   namespace: __namespace__
@@ -21,7 +22,8 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
 - name: RabbitMQClusterPartition
   namespace: __namespace__
@@ -33,7 +35,8 @@
       compareValue: "0"
       severity: critical
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
 - name: RabbitmqOutOfMemory
   namespace: __namespace__
@@ -45,7 +48,8 @@
       compareValue: "90"
       severity: error
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
 - name: RabbitmqTooManyConnections
   namespace: __namespace__
@@ -57,5 +61,6 @@
       compareValue: "1000"
       severity: error
   receivers:
-    - name: gemcloud-default-webhook
+    - alertChannel:
+        id: 1
       interval: 10m
