--- a/nacos/templates/configmap.yaml
+++ b/nacos/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nacos-cm
+  name: {{ template "nacos.fullname" . }}
 data: 
   {{- with .Values.nacos.storage.db }}
   mysql.db.host: {{.host | quote }}
