--- a/nacos/templates/deployment.yaml
+++ b/nacos/templates/deployment.yaml
@@ -85,32 +85,32 @@ spec:
             - name: MYSQL_SERVICE_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: nacos-cm
+                  name: {{ template "nacos.fullname" . }}
                   key: mysql.db.host
             - name: MYSQL_SERVICE_DB_NAME
               valueFrom:
                 configMapKeyRef:
-                  name: nacos-cm
+                  name: {{ template "nacos.fullname" . }}
                   key: mysql.db.name
             - name: MYSQL_SERVICE_PORT
               valueFrom:
                 configMapKeyRef:
-                  name: nacos-cm
+                  name: {{ template "nacos.fullname" . }}
                   key: mysql.port
             - name: MYSQL_SERVICE_USER
               valueFrom:
                 configMapKeyRef:
-                  name: nacos-cm
+                  name: {{ template "nacos.fullname" . }}
                   key: mysql.user
             - name: MYSQL_SERVICE_PASSWORD
               valueFrom:
                 configMapKeyRef:
-                  name: nacos-cm
+                  name: {{ template "nacos.fullname" . }}
                   key: mysql.password
             - name: MYSQL_SERVICE_DB_PARAM
               valueFrom:
                 configMapKeyRef:
-                  name: nacos-cm
+                  name: {{ template "nacos.fullname" . }}
                   key: mysql.param
             {{else}}
             - name: EMBEDDED_STORAGE
