--- a/nacos/templates/service.yaml
+++ b/nacos/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nacos-hs
+  name: {{ template "nacos.hs.fullname" . }}
   annotations:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 spec:
