--- a/nacos/templates/ingress.yaml
+++ b/nacos/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
         {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: nacos-cs
+              serviceName: {{ template "nacos.cs.fullname" . }}
               servicePort: http
         {{- end }}
   {{- end }}
