--- a/prometheus-mongodb-exporter/templates/alertmanagerconfig.yaml
+++ b/prometheus-mongodb-exporter/templates/alertmanagerconfig.yaml
@@ -37,6 +37,7 @@ spec:
           ca: {}
           cert: {}
           insecureSkipVerify: true
+      sendResolved: true
       url: https://kubegems-local-agent.kubegems-local:8041/alert
   route:
     groupBy:
